recursion.lessons.recursion.koch.Koch.scala.error
Koch:17: error: value /= is not a member of Double
		length /= 3;
                       ^